# void-gate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Core.hpp  CryptoEngine.hpp  Protocol.hpp  main.cpp
